Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-7398

mysqld segfaults on FreeBSD 10.1 i386 when built with clang 3.4

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.0.15
    • 10.0.20
    • Compiling
    • FreeBSD i386bsd 10.1-RELEASE FreeBSD 10.1-RELEASE #0 r274401: Tue Nov 11 22:51:51 UTC 2014 root@releng1.nyi.freebsd.org:/usr/obj/usr/src/sys/GENERIC i386
    • 10.0.20

    Description

      From: spil.oss@gmail.com
      To: maria-developers@lists.launchpad.net
      subject: mysqld 10.0.15 segfaults on FreeBSD i386 clang 3.4

      >Description:
      When MariaDB is built with clang 3.4 on FreeBSD i386 (which is
      the default compiler) the server will segfault the moment a
      client connects to it. Same behaviour is observed with clang
      3.5. Built with clang 3.3 on 10.1 runs without segfaults.
      Built on FreeBSD 10.0 (which comes with clang 3.3) runs OK.
      >How-To-Repeat:
      Use FreeBSD 10.1 i386
      Use port to build MariaDB 10.0 or 5.5
      Connect to server using client

      >Fix:
      Build with clang 3.3 or build using Pourdiere (uses 10.0 jail)

      >Submitter-Id: <submitter ID>
      >Originator: Bernard Spil
      >Organization:
      FreeBSD MariaDB 10.0 port committer
      >MySQL support: none
      >Synopsis: MariaDB segfaults on i386 FreeBSD
      >Severity: non-critical
      >Priority: low
      >Category: mysql
      >Class: sw-bug
      >Release: mysql-10.0.15 (FreeBSD Ports)

      >C compiler: clang 3.4
      >C++ compiler: clang 3.4
      >Environment:
      FreeBSD 10.1 GENERIC i386 Celeron U4100 Dual Core 4GB
      System: FreeBSD i386bsd 10.1-RELEASE FreeBSD 10.1-RELEASE #0 r274401: Tue Nov 11 22:51:51 UTC 2014 root@releng1.nyi.freebsd.org:/usr/obj/usr/src/sys/GENERIC i386

      Some paths: /usr/bin/perl /usr/bin/make /usr/local/bin/gmake /usr/bin/cc

      Compilation info (call): CC='/usr/bin/cc' CFLAGS='-O2 -pipe -fstack-protector -fno-strict-aliasing -O2 -g -DNDEBUG -DDBUG_OFF' CXX='/usr/bin/c++' CXXFLAGS='-O2 -pipe -fstack-protector -fno-strict-aliasing -O2 -g -DNDEBUG -DDBUG_O
      FF' LDFLAGS='' ASFLAGS=''
      Compilation info (used): CC='/usr/bin/cc' CFLAGS='-O2 -pipe -fstack-protector -fno-strict-aliasing -O2 -g -DNDEBUG -DDBUG_OFF' CXX='/usr/bin/c++' CXXFLAGS='-O2 -pipe -fstack-protector -fno-strict-aliasing -O2 -g -DNDEBUG -DDBUG_O
      FF' LDFLAGS='' ASFLAGS=''
      LIBC:
      rrr- 1 root wheel 1427444 Nov 11 23:52 /lib/libc.so.7
      rrr- 1 root wheel 2833712 Nov 11 23:52 /usr/lib/libc.a
      rrr- 1 root wheel 166 Nov 11 23:52 /usr/lib/libc.so

      Perl: This is perl 5, version 18, subversion 4 (v5.18.4) built for i386-freebsd-thread-multi-64int

      Attachments

        Issue Links

          Activity

            People

              serg Sergei Golubchik
              spil Bernard Spil
              Votes:
              1 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3.5h
                  3.5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.